# dochris

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_EN.md  REFACTOR_V7_COMPLETE.md  SECURITY.md  cliff.toml  conftest.py  docker-compose.yml  docker_entrypoint.sh  index_completion.txt  log.md  mkdocs.yml  pyproject.toml
.claude/: scheduled_tasks.json  settings.json
.claude/agents/: code-reviewer.md  test-fixer.md
.claude/commands/: ingest-status.md  quality-report.md  review.md  test.md
.claude/hooks/config/: hooks-config.json
.claude/rules/: code-standards.md  documentation.md
.claude/skills/kb-compile/: SKILL.md
.claude/skills/kb-promote/: SKILL.md
.claude/skills/kb-quality/: SKILL.md
.claude/skills/kb-query/: SKILL.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  stale.yml
benchmark/: README.md  bench_parsers.py  conftest.py  test_bench_compilation.py  test_bench_indexing.py  test_bench_quality.py  test_bench_query.py  test_bench_vector.py
docs/: EXAMPLES.md  PERFORMANCE_REVIEW.md  QUICKSTART.md  RAG_IMPROVEMENT_PLAN.md  ROADMAP.md  TASK-expert-review-fixes.md  TASK-score_summary_quality_v4-refactor.md  content_filter_blocked_docs.md  hierarchical_summarization_research.md  index.md  open-source-readiness.md  optimization_summary_v5.md
docs/advanced/: api.md  docker.md  llm-providers.md  logging.md  plugins.md  vector-stores.md
docs/api/: exceptions.md  http-api.md  overview.md  plugin.md  settings.md  vector.md
docs/api/core/: cache.md  llm-client.md  quality-scorer.md  retry-manager.md  text-chunker.md
docs/api/parsers/: code-parser.md  doc-parser.md  pdf-parser.md
docs/api/phases/: phase1.md  phase2.md  phase3.md
docs/development/: architecture.md  contributing.md  testing.md
docs/getting-started/: cli.md  installation.md  quickstart.md
docs/guide/: compilation.md  concepts.md  configuration.md  graph.md  ingestion.md  promote.md  quality.md  query.md
examples/: 01_basic_ingest.py  02_quality_scoring.py  03_custom_parser.py  04_llm_provider.py  05_vector_store.py  06_plugin_hooks.py
examples/plugins/: compile_notify.py  epub_parser.py  query_enhance.py
frontend/: DESIGN_SYSTEM.md  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: StreamingMarkdown.tsx
frontend/src/lib/: api.ts  graphBuilder.ts  graphRenderer.ts  utils.ts
frontend/src/pages/: CandidatesPage.tsx  CompilePage.tsx  DashboardPage.tsx  FilesPage.tsx  GraphPage.tsx  QualityPage.tsx  QueryPage.tsx  SettingsPage.tsx  StatusPage.tsx
frontend/src/types/: index.ts
monitoring-reports/: failure_analysis_20260407.txt  monitoring-report-20260406_071241.md  monitoring-report-20260406_071509.md  monitoring-report-20260406_072816.md  recompile_concepts_20260407_102417.txt
src/dochris/: __init__.py  __main__.py  constants.py  exceptions.py  log.py  log_config.py  log_utils.py  manifest.py  promote.py  protocols.py  settings.py  types.py
src/dochris/admin/: __init__.py  batch_promote.py  index_knowledge.py  ocr_failed_pdf.py  recompile.py  recompile_missing_concepts.py  sanitize_sensitive_words.py  transcribe_failed_audio.py
src/dochris/api/: __init__.py  app.py  auth.py  schemas.py  sse.py
src/dochris/cli/: __init__.py  cli_clean.py  cli_compile.py  cli_completion.py  cli_config.py  cli_doctor.py  cli_export.py  cli_graph.py  cli_ingest.py  cli_init.py  cli_list.py  cli_plugin.py  cli_query.py  cli_review.py  cli_serve.py  cli_utils.py  cli_vault.py  main.py
src/dochris/compensate/: __init__.py  compensate_extractors.py  compensate_failures.py  compensate_utils.py
src/dochris/core/: __init__.py  cache.py  hierarchical_summarizer.py  llm_client.py  quality_scorer.py  retry_manager.py  summary_generator.py  text_chunker.py  utils.py
tests/: __init__.py  conftest.py  test_admin_index_knowledge.py  test_admin_init.py  test_api_auth.py  test_api_init.py  test_batch_promote.py  test_batch_promote_v2.py  test_build_answer_context.py  test_cache.py  test_chromadb_store_v2.py  test_cli.py  test_cli_compile_v2.py  test_cli_completion.py  test_cli_doctor.py  test_cli_doctor_v2.py  test_cli_doctor_v3.py  test_cli_export.py  test_cli_ingest_v2.py  test_cli_init.py  test_cli_init_v2.py  test_cli_init_v3.py  test_cli_main_v2.py  test_cli_plugin.py  test_cli_plugin_v2.py  test_cli_plugin_v3.py  test_cli_query_v2.py  test_cli_serve.py  test_cli_utils_v2.py  test_cli_vault_v2.py  test_code_parser.py  test_compensate_extractors.py  test_compensate_extractors_v2.py  test_compensate_extractors_v3.py  test_compensate_failures.py  test_compensate_failures_v2.py  test_compensate_find_failed.py  test_compensate_utils.py  test_compensate_utils_v2.py  test_config.py  (+126 more)
tests/test_api/: conftest.py  test_compile.py  test_graph.py  test_promote.py  test_query.py  test_status.py
(+97 files in other folders)
