[project]
name = "dochris"
version = "1.2.0"
description = "个人知识库编译系统 - 四阶段流水线"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "caozhangqing85-cyber"}
]
keywords = ["knowledge-base", "llm", "rag", "obsidian", "compiler", "vector-search", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business",
    "Typing :: Typed",
    "Natural Language :: Chinese (Simplified)",
    "Environment :: Console",
]

dependencies = [
    "openai>=1.0.0",
    "markitdown>=0.0.1",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]
audio = ["faster-whisper>=0.10.0"]
pdf = [
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.10.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "httpx>=0.24.0",
]
all = [
    "dochris[audio,pdf,ocr,dev,api]",
]

[project.scripts]
kb = "dochris.cli.main:main"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.urls]
Homepage = "https://github.com/caozhangqing85-cyber/dochris"
Repository = "https://github.com/caozhangqing85-cyber/dochris"
Issues = "https://github.com/caozhangqing85-cyber/dochris/issues"
Changelog = "https://github.com/caozhangqing85-cyber/dochris/blob/main/CHANGELOG.md"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "ARG001", # unused-function-argument (interface signatures)
    "ARG002", # unused-method-argument (interface signatures)
    "SIM115", # open-file-with-context-handler
    "B017",   # assert-raises-exception
    "SIM105", # suppressible-exception
    "SIM113", # use-enumerate
    "ARG005", # unused-lambda-argument
    "SIM117", # multiple-with-statements (readability preference)
]

# Per-file ignores for legacy code patterns (E402: sys.path.insert or lazy imports)
per-file-ignores."src/dochris/compensate/compensate_utils.py" = ["E402"]
per-file-ignores."src/dochris/compensate/compensate_failures.py" = ["E402"]
per-file-ignores."src/dochris/compensate/compensate_extractors.py" = ["E402"]
per-file-ignores."src/dochris/admin/ocr_failed_pdf.py" = ["E402"]
per-file-ignores."src/dochris/admin/recompile.py" = ["E402"]
per-file-ignores."src/dochris/admin/sanitize_sensitive_words.py" = ["E402"]
per-file-ignores."src/dochris/admin/transcribe_failed_audio.py" = ["E402"]
per-file-ignores."src/dochris/phases/phase3_query.py" = ["E402"]
per-file-ignores."src/dochris/workers/compiler_worker.py" = ["E402"]
per-file-ignores."src/dochris/workers/monitor_worker.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=dochris",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=60",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["dochris"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
